Fix extra margin at the end of code block

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -715,6 +715,7 @@ pre {
   code {
     background-color: transparent;
     border-radius: 0;
+    margin-bottom: 0;
     padding: 0;
   }
 }
